# knowrob

./: CMakeLists.txt  package.xml
.github/workflows/: main.yml
include/knowrob/: KnowRobError.h  Logger.h  PropertyTree.h  ThreadPool.h
include/knowrob/formulas/: Bottom.h  Conjunction.h  Disjunction.h  Negation.h  PredicateIndicator.h  Top.h
include/knowrob/ontologies/: DataSourceHandler.h  OntologyFile.h
include/knowrob/plugins/: PluginModule.h
include/knowrob/queries/: AnswerMerger.h  (+5 more)
ros1/action/: AskAll.action  AskIncremental.action
ros1/msg/: GraphAnswerMessage.msg  GraphQueryMessage.msg
rosinstall/: knowrob-base.rosinstall
src/: KnowledgeBase.cpp  Logger.cpp  PropertyTree.cpp  ThreadPool.cpp  URI.cpp
src/formulas/: Bottom.cpp  CompoundFormula.cpp  Conjunction.cpp  DependencyGraph.cpp  Disjunction.cpp  FirstOrderLiteral.cpp  Formula.cpp  Implication.cpp  ModalFormula.cpp  ModalOperator.cpp  Negation.cpp  Predicate.cpp  PredicateIndicator.cpp  Top.cpp
src/ontologies/: DataSource.cpp  DataSourceHandler.cpp
src/queries/: Answer.cpp  AnswerDontKnow.cpp  AnswerNo.cpp  AnswerYes.cpp  ConjunctiveBroadcaster.cpp  QueryContext.cpp  QueryParser.cpp  QueryStage.cpp  QueryTree.cpp  Token.cpp  TokenBroadcaster.cpp  TokenBuffer.cpp  TokenQueue.cpp  TokenStream.cpp
src/reasoner/: DataDrivenReasoner.cpp  GoalDrivenReasoner.cpp  Reasoner.cpp  ReasonerEvent.cpp  ReasonerManager.cpp
src/semweb/: Class.cpp  ImportHierarchy.cpp  Property.cpp  Resource.cpp  Vocabulary.cpp
src/storage/: QueryableStorage.cpp  Storage.cpp
src/terms/: Atom.cpp  Atomic.cpp  Bindings.cpp  Blank.cpp  Function.cpp  IRIAtom.cpp  ListTerm.cpp  Numeric.cpp  RDFNode.cpp  String.cpp  Term.cpp  Variable.cpp  XSDAtomic.cpp
src/triples/: FramedTriple.cpp  FramedTriplePattern.cpp  GraphQuery.cpp  GraphSelector.cpp  GraphTerm.cpp  Perspective.cpp  TripleContainer.cpp
tests/py/: test-module.cpp  test_boost_python.py
(+58 files in other folders)
